--- a/see_differences.ipynb
+++ b/see_differences.ipynb
@@ -53,8 +53,8 @@
    "source": [
     "train.drop(columns=['id', 'city', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour', 'pm2_5'], inplace=True)\n",
     "test.drop(columns=['id', 'city', 'country', 'site_id', 'site_latitude', 'site_longitude', 'hour'], inplace=True)\n",
-    "train.drop(columns=[column for column in train.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)\n",
-    "test.drop(columns=[column for column in test.columns if 'sensor_zenith' in column or 'sensor_azimuth' in column], inplace=True)"
+    "train.drop(columns=[column for column in train.columns if 'sensor' in column], inplace=True)\n",
+    "test.drop(columns=[column for column in test.columns if 'sensor' in column], inplace=True)"
    ],
    "id": "a0ad2d488119f18c",
    "outputs": [],
@@ -307,7 +307,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.lineplot(data=whole[['date', 'uvaerosolindex_sensor_altitude', 'is_train']], x='date', y='uvaerosolindex_sensor_altitude', hue='is_train')",
+   "source": "# sns.lineplot(data=whole[['date', 'uvaerosolindex_sensor_altitude', 'is_train']], x='date', y='uvaerosolindex_sensor_altitude', hue='is_train')",
    "id": "561a86dda94c898e",
    "outputs": [],
    "execution_count": null
@@ -339,7 +339,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.histplot(data=whole[['uvaerosolindex_sensor_altitude', 'is_train']], x='uvaerosolindex_sensor_altitude', hue='is_train')",
+   "source": "# sns.histplot(data=whole[['uvaerosolindex_sensor_altitude', 'is_train']], x='uvaerosolindex_sensor_altitude', hue='is_train')",
    "id": "5b39cd27e9f892cd",
    "outputs": [],
    "execution_count": null
@@ -347,7 +347,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "pd.concat([test['uvaerosolindex_sensor_altitude'].describe(), train['uvaerosolindex_sensor_altitude'].describe()], axis=1)",
+   "source": "# pd.concat([test['uvaerosolindex_sensor_altitude'].describe(), train['uvaerosolindex_sensor_altitude'].describe()], axis=1)",
    "id": "e08e9b321464a5b7",
    "outputs": [],
    "execution_count": null
@@ -363,7 +363,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "limit = train.loc[(test['uvaerosolindex_sensor_altitude'].min() < train['uvaerosolindex_sensor_altitude']) & (train['uvaerosolindex_sensor_altitude'] > test['uvaerosolindex_sensor_altitude'].max()), :]",
+   "source": "# limit = train.loc[(test['uvaerosolindex_sensor_altitude'].min() < train['uvaerosolindex_sensor_altitude']) & (train['uvaerosolindex_sensor_altitude'] > test['uvaerosolindex_sensor_altitude'].max()), :]",
    "id": "2a9e6a7bfd680dae",
    "outputs": [],
    "execution_count": null
