--- a/models.ipynb
+++ b/models.ipynb
@@ -205,36 +205,6 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "# params_12 =  {'num_leaves': 25, \n",
-    "#            'max_depth': 15, \n",
-    "#            'learning_rate': 0.01982093884782807, \n",
-    "#            'n_estimators': 1042, \n",
-    "#            'tree_learner': 'voting', \n",
-    "#            'subsample': 0.8572357579881347, \n",
-    "#            'colsample_bytree': 0.8692866219741755, \n",
-    "#            'min_data_in_leaf': 57,\n",
-    "#            'bagging_freq': 1,\n",
-    "#             'device': 'cpu',\n",
-    "#             'n_jobs': -1,\n",
-    "#             'random_state': 4,\n",
-    "#             'verbosity': -1,\n",
-    "#            'objective': 'root_mean_squared_error',\n",
-    "#             'boosting_type': 'gbdt',\n",
-    "#            }\n",
-    "# best_lgbm = lgb.LGBMRegressor(**params_12)\n",
-    "# best_lgbm.fit(X, y)\n",
-    "# best_lgbm_pred = best_lgbm.predict(X_test)\n",
-    "# root_mean_squared_error(y_test, best_lgbm_pred)\n",
-    "# save_to_csv(best_lgbm.predict(test), 'check.csv')"
-   ],
-   "id": "d068d85105ef8d8",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
    "cell_type": "markdown",
    "source": "### Wykres przedstawiający każdy <i>trial</i> w procesie nauki",
    "id": "7dd9e64e1b394237"
@@ -336,6 +306,36 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "best_params =  {\n",
+    "    'max_bin': 26, \n",
+    "    'num_leaves': 101, \n",
+    "    'max_depth': 5, \n",
+    "    'learning_rate': 0.016428411008073084, \n",
+    "    'n_estimators': 637, \n",
+    "    'bagging_fraction': 0.6421597060699505, \n",
+    "    'colsample_bytree': 0.6822813363477919, \n",
+    "    'min_data_in_leaf': 63, \n",
+    "    'reg_lambda': 0.6979791353058291, \n",
+    "    'bagging_freq': 5,\n",
+    "    'device': 'cpu', \n",
+    "    'n_jobs': -1, \n",
+    "    'random_state': 4, \n",
+    "    'verbosity': -1, \n",
+    "    'tree_learner': 'voting', \n",
+    "    'objective': 'root_mean_squared_error', \n",
+    "    'boosting_type': 'gbdt'\n",
+    "}\n",
+    "lgb_model = lgb.LGBMRegressor(**best_params)\n",
+    "lgb_model.fit(X, y)"
+   ],
+   "id": "995a574398299c5d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "### <center>Optuna + CatBoost</center>",
    "id": "90efbae932d08aad"
@@ -351,7 +351,7 @@
     "    params = {\n",
     "        'iterations': trial.suggest_int('iterations', 200, 700),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 1e-3, 5e-2, log=True),\n",
-    "        'depth': trial.suggest_int('depth', 11, 20),\n",
+    "        'depth': trial.suggest_int('depth', 9, 16),\n",
     "        'grow_policy': 'Depthwise',\n",
     "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 1e-3, 5e-2, log=True),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 0.9, log=True),\n",
